--- a/news.html
+++ b/news.html
@@ -7,7 +7,20 @@
   <link rel="stylesheet" href="style.css" />
   <link rel="icon" href="icon.png" type="image/png" />
   <style>
-    /* Дополнительные стили для новостей */
+    /* Контейнер на всю ширину, как в rules */
+    .content-wrapper {
+      max-width: 1000px;
+      margin: 30px auto;
+      background: #2a1a00;
+      padding: 30px 40px;
+      border-radius: 12px;
+      box-shadow: 0 0 20px #ff8c00;
+      box-sizing: border-box;
+    }
+    .main-content {
+      font-family: Georgia, serif;
+      color: #f5e6c4;
+    }
     .main-content h1 {
       margin-bottom: 20px;
       color: #ff8c00;
@@ -19,10 +32,11 @@
       margin-bottom: 20px;
       border-radius: 12px;
       box-shadow: 0 0 20px #ff8c00;
-      color: #f5e6c4;
-      font-family: Georgia, serif;
       line-height: 1.5em;
-      white-space: pre-wrap; /* сохранять переносы строк */
+      white-space: pre-wrap; /* переносы строк сохраняются */
+      word-wrap: break-word; /* перенос длинных слов */
+      overflow-wrap: break-word;
+      /* высота подстраивается автоматически */
     }
     .news-date {
       font-weight: bold;
@@ -30,13 +44,9 @@
       margin-bottom: 10px;
       text-shadow: 0 0 5px #ffb84d;
     }
-    .content-wrapper {
-      max-width: 800px;
-      margin: 30px auto;
-      background: #2a1a00;
-      padding: 30px 40px;
-      border-radius: 12px;
-      box-shadow: 0 0 20px #ff8c00;
+    nav.side-nav a.active {
+      background: #ff8c00;
+      color: #fff;
     }
   </style>
 </head>
