--- a/news.html
+++ b/news.html
@@ -8,35 +8,6 @@
   <link rel="icon" href="icon.png" type="image/png" />
   <!-- Подключаем PapaParse для корректного парсинга CSV -->
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
-  <style>
-    /* Добавляем стили для обёртки картинок */
-    .news-images-wrapper {
-      display: flex;
-      gap: 10px;          /* Расстояние между картинками */
-      flex-wrap: wrap;    /* Перенос на новую строку при необходимости */
-      margin: 10px 0;     /* Отступы сверху и снизу */
-    }
-
-    .news-images-wrapper img {
-      height: 200px;       /* фиксированная высота */
-      width: 100%;         /* растягиваем по ширине контейнера */
-      max-width: 300px;    /* ограничиваем максимальную ширину */
-      border: 2px solid #ff8c00; /* Оранжевая рамка */
-      border-radius: 8px;
-      padding: 4px;
-      box-sizing: border-box;
-      object-fit: cover;   /* заполняем контейнер без пустых полей */
-      cursor: pointer;      /* Курсор указывает на кликабельность */
-      transition: transform 0.3s ease; /* Плавное увеличение */
-      margin: 0;            /* убираем пустые отступы сверху и снизу */
-      display: block;
-    }
-    .news-images-wrapper img.zoomed {
-      transform: scale(1.5);
-      position: relative;
-      z-index: 10;
-    }
-  </style>
 </head>
 <body>
   <nav class="side-nav">
@@ -58,106 +29,6 @@
     </div>
   </div>
 
-  <script>
-    const CSV_URL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vQSCuP7luNbTXwzyoU7OuAjF8rsyvKg22xYvXS6r2FTVwN0N3vfC0cI_oMsa9Xr0Z3Icdp8j8FQN4wj/pub?output=csv';
-
-    // Функция форматирования даты из "YYYY-MM-DD" в "DD.MM.YYYY"
-    function formatDate(dateStr) {
-      if (!dateStr) return '';
-      const date = new Date(dateStr);
-      if (isNaN(date)) return dateStr;
-      const d = ('0' + date.getDate()).slice(-2);
-      const m = ('0' + (date.getMonth() + 1)).slice(-2);
-      const y = date.getFullYear();
-      return `${d}.${m}.${y}`;
-    }
-
-    // Функция преобразования ссылки Google Drive в прямую ссылку для <img>
-    function convertDriveLinkToDirect(url) {
-      const match = url.match(/\/d\/([a-zA-Z0-9_-]+)\//);
-      if (match && match[1]) {
-        return `https://drive.google.com/uc?export=view&id=${match[1]}`;
-      }
-      return url; // если не совпало, возвращаем как есть
-    }
-
-    async function loadNews() {
-      const container = document.getElementById('news-container');
-      container.textContent = 'Загрузка новостей...';
-
-      try {
-        // Добавляем параметр для отключения кэша
-        const url = CSV_URL + '&_=' + new Date().getTime();
-        const response = await fetch(url, { cache: 'no-store' });
-        if (!response.ok) throw new Error('Ошибка загрузки CSV');
-        const csvText = await response.text();
-
-        const parsed = Papa.parse(csvText, {
-          header: true,
-          skipEmptyLines: true,
-        });
-
-        const news = parsed.data;
-
-        if (news.length === 0) {
-          container.textContent = 'Новостей пока нет.';
-          return;
-        }
-
-        container.innerHTML = '';
-        news.reverse().forEach(item => {
-          const newsItem = document.createElement('div');
-          newsItem.className = 'news-item';
-
-          const dateDiv = document.createElement('div');
-          dateDiv.className = 'news-date';
-          dateDiv.textContent = formatDate(item.date || item.Date || item.DATE);
-
-          newsItem.appendChild(dateDiv);
-
-          const imgUrlsRaw = item.image || item.img || item.IMAGE || '';
-          const imgUrls = imgUrlsRaw.split('\n').map(s => s.trim()).filter(s => s.length > 0);
-
-          if (imgUrls.length > 0) {
-            const imagesWrapper = document.createElement('div');
-            imagesWrapper.className = 'news-images-wrapper';
-
-            imgUrls.forEach(imgUrl => {
-              const directUrl = convertDriveLinkToDirect(imgUrl);
-              const img = document.createElement('img');
-              img.src = directUrl;
-              img.alt = 'Изображение новости';
-              imagesWrapper.appendChild(img);
-            });
-
-            newsItem.appendChild(imagesWrapper);
-          }
-
-          const textP = document.createElement('p');
-          textP.className = 'news-text';
-
-          // Убираем лишние пустые строки, заменяем множественные переносы на одинарные
-          let rawText = item.text || item.Text || item.TEXT || '';
-          rawText = rawText.replace(/\n{2,}/g, '\n');
-          textP.innerHTML = rawText.replace(/\n/g, '<br>');
-
-          newsItem.appendChild(textP);
-          container.appendChild(newsItem);
-        });
-
-        // Обработчик клика для приближения картинки
-        container.addEventListener('click', function(event) {
-          if (event.target.tagName === 'IMG' && event.target.closest('.news-images-wrapper')) {
-            event.target.classList.toggle('zoomed');
-          }
-        });
-      } catch (e) {
-        container.textContent = 'Не удалось загрузить новости.';
-        console.error(e);
-      }
-    }
-
-    loadNews();
-  </script>
+  <script src="script.js"></script>
 </body>
 </html>
