--- a/index.html
+++ b/index.html
@@ -3,35 +3,56 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Модовый сервер Minecraft</title>
+  <title>Правила сервера - Модовый сервер Minecraft</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="icon" href="icon.png" type="image/png" />
 </head>
 <body>
   <nav class="side-nav">
-    <a href="index.html" class="active">Главная</a>
+    <a href="index.html">Главная</a>
     <a href="news.html">Новости</a>
-    <a href="rules.html">Правила</a>
+    <a href="rules.html" class="active">Правила</a>
   </nav>
 
   <div class="content-wrapper">
     <div class="main-content">
-      <h1>Добро пожаловать на наш модовый сервер Minecraft, Игрок!</h1>
-      <p>Любители приключений — это дружелюбный модовый сервер Minecraft с уникальными квестами и активным ролевым сообществом. Мы создаём атмосферу взаимного уважения и сотрудничества, где каждый игрок может погрузиться в захватывающий игровой процесс.</p>
+      <h1>Правила сервера</h1>
 
-      <h3>IP сервера:</h3>
-      <p class="server-ip"><b>62.60.230.20</b></p>
+      <p>Пункты могут дополняться, видоизменяться в зависимости от ситуации. Следите внимательно за новостями и не забывайте, что не знание не освобождает от наказания!</p>
 
-      <div class="button-group">
-        <a href="https://discord.gg/brzqxXQSm8" target="_blank" rel="noopener noreferrer" class="main-button">Присоединиться к Discord</a>
-        <a href="https://drive.google.com/file/d/1sADPdzai2lmplPwnc7rLXcC2Fu89xGu0/view?usp=drive_link" target="_blank" rel="noopener noreferrer" class="main-button">Скачать папку модов</a>
-        <a href="https://vk.me/join/wRUvoISqw2i/jPUbYqICQ8wa07_u4iSR8V4=" target="_blank" rel="noopener noreferrer" class="main-button">Чат ВКонтакте</a>
-      </div>
+      <h2 class="rules-section-title">▶ ПРАВИЛА ДИСКОРД СЕРВЕРА</h2>
+      <ul>
+        <li>Как только Вы стали полноценным игроком нашего сервера, просим Вас поменять свой ник в Дискорде по данному шаблону: "Ник/Имя | Ник в майне".</li>
+        <li>Запрещены конфликты. Личностные разногласия должны решаться между инициаторами конфликта, не касаясь непосредственно сервера. При продолжении накала конфликта, Администрация выдаст вам предупреждение. Если же инициаторы конфликта к нему не прислушаются, то к участникам конфликта будут применены меры воздействия (вплоть до бана).</li>
+        <li>Запрещена реклама. На территории сервера запрещена реклама, пока Администратором не будет выдано разрешение.</li>
+        <li>Контент 18+ может поститься исключительно в специализированном канале #запрещенка-🔞. В остальных случаях сообщения будут удаляться, а участникам выдаваться предупреждение, а затем бан.</li>
+        <li>Запрещен выход из дискорд сервера, пока вы играете на сервере в майнкрафте. Если вы выходите с Дискорд сервера, то вы автоматически покидаете проект, и если будете планировать возвращаться, то придется возвращаться на правах новенького.</li>
+        <li>Запрещено обсуждение политики. Комментарии излишни.</li>
+      </ul>
 
-<footer>
-  <p>© Любители приключений, 2025</p>
-</footer>
+      <h2 class="rules-section-title">▶ ПРАВИЛА МАЙНКРАФТ СЕРВЕРА</h2>
+      <ul>
+        <li>Запрещены конфликты. Личностные разногласия должны решаться между инициаторами конфликта, не касаясь непосредственно сервера. При продолжении накала конфликта, Администрация выдаст вам предупреждение. Если же инициаторы конфликта к нему не прислушаются, то к участникам конфликта будут применены меры воздействия (вплоть до бана).</li>
+        <li>Запрещено обсуждение политики. Комментарии излишни.</li>
+        <li>Запрещена агитация, реклама и прочее в любых формах его проявления.</li>
+        <li>Ивенты из разрядов важных рейд-боссов или структур согласовываются коллективно. Есть несколько важных ивентов как в ванильном майнкрафте, так и в некоторых модах. Это не маленькие эпизоды, а целые события для сервера. Администрация приняла решения время и даты проведения подобных ивентов согласовывать с игроками. Сбор игроков позволит закрыть гештальты желающим. Вы – не одни на сервере, вас целое множество.</li>
+        <li>Любое умышленное причинение вреда запрещено. В его перечень которого в особенности входит гриферство, убийства как игроков, питомцев и мобов на чьей-либо территории, воровство. Относитесь к вещам и творениям других так, как будто за нарушение чужого пространства. Сюда не входят действия, имеющие своей целью шутку или до тех пор, пока обе стороны дозволяют подобное.</li>
+        <li>Запрещено использование читов, ресурспаков и прочих программ для обеспечения явного преимущества над другими игроками, а также создавать лаг-машины, делать прочие непотребства для умертвления сервера.</li>
+        <li>Изменить расу Вы имеете право только один раз! Обращайтесь к админу за сферами.</li>
+        <li>Запрещено ломать научный-центр как лорно-важную постройку. Научный центр охватывает существенную площадь с -224 53 -280 по -211 64 -201 координату. Также мы настоятельно просим удержаться фантомами от любопыства и протискиваться сквозь закрытые комнаты Научного центра. Мы понимаем Ваше желание, а Вы поймите наше нежелание вводить ограничения на эту зону. Нам будет намного сложнее установить приват, нежели Вас просить.</li>
+      </ul>
 
+      <h2 class="rules-section-title">▶ АДМИНИСТРАЦИЯ</h2>
+      <ul>
+        <li>DexGarden - глав. админ, вечный двигатель, живущий на реактивной тяге своего горящего пукана;</li>
+        <li>KeinCriper - админ, креативщик, идейник, все сюжеты зависят от него;</li>
+        <li>双葉理央 (Футаба) - тех-админ, томящаяся пробка в электро-щитке;</li>
+        <li>Grobberus - админ, узбогоитель, он допьет чай и будет смотреть, что ты там навертел.</li>
+      </ul>
+
+      <footer>
+        <p>© Любители приключений, 2025</p>
+      </footer>
     </div>
   </div>
 </body>
