Добавлена иконка сервера

--- a/rules.html
+++ b/rules.html
@@ -8,11 +8,15 @@
   <link rel="icon" href="icon.png" type="image/png" />
 </head>
 <body>
-  <nav class="side-nav">
-    <a href="index.html">Главная</a>
-    <a href="news.html">Новости</a>
-    <a href="rules.html" class="active">Правила</a>
-  </nav>
+<nav class="side-nav">
+  <div class="logo-wrapper">
+    <img src="icon.png" alt="Иконка сервера" class="server-icon" />
+  </div>
+  <a href="index.html" >Главная</a>
+  <a href="news.html">Новости</a>
+  <a href="rules.html" class="active">Правила</a>
+</nav>
+
 
   <div class="content-wrapper">
     <div class="main-content">
