--- a/news.html
+++ b/news.html
@@ -9,11 +9,14 @@
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
 </head>
 <body>
-  <nav class="side-nav">
-    <a href="index.html">Главная</a>
-    <a href="news.html" class="active">Новости</a>
-    <a href="rules.html">Правила</a>
-  </nav>
+<nav class="side-nav">
+  <div class="logo-wrapper">
+    <img src="icon.png" alt="Иконка сервера" class="server-icon" />
+  </div>
+  <a href="index.html">Главная</a>
+  <a href="news.html" class="active">Новости</a>
+  <a href="rules.html">Правила</a>
+</nav>
 
   <div class="content-wrapper">
     <div class="main-content">
