Тёмная и светлая тема?

--- a/rules.html
+++ b/rules.html
@@ -15,6 +15,15 @@
   <a href="index.html">Главная</a>
   <a href="news.html">Новости</a>
   <a href="rules.html" class="active">Правила</a>
+  <div class="theme-switcher-wrapper">
+    <button class="theme-switcher" id="theme-toggle" title="Переключить тему" aria-label="Переключить тему">
+      <span class="theme-toggle-track">
+        <span class="theme-toggle-icon sun">☀️</span>
+        <span class="theme-toggle-thumb"></span>
+        <span class="theme-toggle-icon moon">🌙</span>
+      </span>
+    </button>
+  </div>
 </nav>
   <div class="content-wrapper">
     <div class="main-content">
@@ -52,5 +61,6 @@
       </footer>
     </div>
   </div>
+<script src="theme.js"></script>
 </body>
 </html>
