--- a/index.html
+++ b/index.html
@@ -16,17 +16,27 @@
   <a href="news.html">Новости</a>
   <a href="rules.html">Правила</a>
 </nav>
+
   <div class="content-wrapper">
     <div class="main-content">
-      <h1>Добро пожаловать на наш модовый сервер Minecraft, Игрок!</h1>
-      <p>Любители приключений — это дружелюбный модовый сервер Minecraft с уникальными квестами и активным ролевым сообществом. Мы создаём атмосферу взаимного уважения и сотрудничества, где каждый игрок может погрузиться в захватывающий игровой процесс.</p>
+      <h1>Уютный модовый сервер для любителей приключений</h1>
+      <div class="server-description">
+        <p>Добро пожаловать на наш модовый SMP-сервере в Minecraft! Вас ожидает увлекательное приключение в мире, где магия, технологии и мистика сливаются воедино. Мы предлагаем не только интересный геймплей, но и ненавязчивый сюжет, который игроки могут исследовать по своему усмотрению или же полностью игнорировать, погружаясь в свободный игровой процесс.</p>
+        <p>Наш сервер базируется на тщательно подобранной сборке из более чем 120 модов, адаптированных для версии 1.16.5 Forge Optifine. Вы сможете испытать свои силы в схватках с драконами из Ice and Fire, освоить сложные ритуалы Occultism и Blood Magic, исследовать древние гробницы Tombstone и даже заняться фермерством с помощью Farmers Delight.</p>
+        <p>Присоединиться к нам очень легко и просто благодаря открытому порту, а сервер, рассчитанный на 30 игроков, обеспечит комфортную игру для всех.</p>
+        <p>Наша команда из четырех администраторов поддерживает сервер в актуальном состоянии, оперативно устраняя проблемы и запуская новые увлекательные ивенты. Мы стремимся создать теплое и дружное сообщество, где каждый сможет найти занятие по душе.</p>
+        <p>Присоединяйтесь к нашему активному ВК-чату и Discord-серверу! Здесь вы всегда будете в курсе последних новостей, обновлений и увлекательных событий. В нашем сообществе вас ждут разнообразные рубрики и возможность пообщаться с другими игроками.</p>
+      </div>
+
       <h3>IP сервера:</h3>
       <p class="server-ip"><b>62.60.230.20</b></p>
+
       <div class="button-group">
         <a href="https://discord.gg/brzqxXQSm8" target="_blank" rel="noopener noreferrer" class="main-button">Присоединиться к Discord</a>
         <a href="https://drive.google.com/file/d/1sADPdzai2lmplPwnc7rLXcC2Fu89xGu0/view?usp=drive_link" target="_blank" rel="noopener noreferrer" class="main-button">Скачать папку модов</a>
         <a href="https://vk.me/join/wRUvoISqw2i/jPUbYqICQ8wa07_u4iSR8V4=" target="_blank" rel="noopener noreferrer" class="main-button">Чат ВКонтакте</a>
       </div>
+
       <footer>
         <p>© Любители приключений, 2025</p>
       </footer>
