--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </nav>
 
 <div class="content-wrapper">
-  <div class="main-content main-content-flex">
+  <div class="main-content main-content-grid">
     <div class="main-left">
       <h1>Уютный модовый сервер для любителей приключений</h1>
       <div class="server-description">
@@ -46,7 +46,7 @@
       </div>
     </div>
   </div>
-  <div class="button-group">
+  <div class="button-group main-buttons-centered">
     <a href="https://discord.gg/brzqxXQSm8" target="_blank" rel="noopener noreferrer" class="main-button">Присоединиться к Discord</a>
     <a href="https://drive.google.com/file/d/1sADPdzai2lmplPwnc7rLXcC2Fu89xGu0/view?usp=drive_link" target="_blank" rel="noopener noreferrer" class="main-button">Скачать папку модов</a>
     <a href="https://vk.me/join/wRUvoISqw2i/jPUbYqICQ8wa07_u4iSR8V4=" target="_blank" rel="noopener noreferrer" class="main-button">Чат ВКонтакте</a>
