--- a/index.html
+++ b/index.html
@@ -1,59 +1,30 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Модовый сервер Minecraft</title>
-  <link rel="stylesheet" href="style.css" />
-  <link rel="icon" href="icon.png" type="image/png" />
-</head>
-<body>
-<nav class="side-nav">
-  <div class="logo-wrapper">
-    <img src="icon.png" alt="Иконка сервера" class="server-icon" />
-  </div>
-  <a href="index.html" class="active">Главная</a>
-  <a href="news.html">Новости</a>
-  <a href="rules.html">Правила</a>
-</nav>
-
-<div class="content-wrapper">
-  <div class="main-content main-content-grid">
-    <div class="main-left">
-      <h1>Уютный модовый сервер для любителей приключений</h1>
-      <div class="server-description">
-        <p>Добро пожаловать на наш модовый SMP-сервере в Minecraft! Вас ожидает увлекательное приключение в мире, где магия, технологии и мистика сливаются воедино. Мы предлагаем не только интересный геймплей, но и ненавязчивый сюжет, который игроки могут исследовать по своему усмотрению или же полностью игнорировать, погружаясь в свободный игровой процесс.</p>
-        <p>Наш сервер базируется на тщательно подобранной сборке из более чем 120 модов, адаптированных для версии 1.16.5 Forge Optifine. Вы сможете испытать свои силы в схватках с драконами из Ice and Fire, освоить сложные ритуалы Occultism и Blood Magic, исследовать древние гробницы Tombstone и даже заняться фермерством с помощью Farmers Delight.</p>
-        <p>Присоединиться к нам очень легко и просто благодаря открытому порту, а сервер, рассчитанный на 30 игроков, обеспечит комфортную игру для всех.</p>
-        <p>Наша команда из четырех администраторов поддерживает сервер в актуальном состоянии, оперативно устраняя проблемы и запуская новые увлекательные ивенты. Мы стремимся создать теплое и дружное сообщество, где каждый сможет найти занятие по душе.</p>
-        <p>Присоединяйтесь к нашему активному ВК-чату и Discord-серверу! Здесь вы всегда будете в курсе последних новостей, обновлений и увлекательных событий. В нашем сообществе вас ждут разнообразные рубрики и возможность пообщаться с другими игроками.</p>
-      </div>
-      <div class="server-ip-row">
-        <span class="server-ip-label">IP сервера:</span>
-        <span class="server-ip-value">62.60.230.20</span>
-      </div>
+<div class="main-content main-content-flex">
+  <div class="main-left">
+    <h1>Уютный модовый сервер для любителей приключений</h1>
+    <div class="server-description">
+      <p>Добро пожаловать на наш модовый SMP-сервере в Minecraft! Вас ожидает увлекательное приключение в мире, где магия, технологии и мистика сливаются воедино. Мы предлагаем не только интересный геймплей, но и ненавязчивый сюжет, который игроки могут исследовать по своему усмотрению или же полностью игнорировать, погружаясь в свободный игровой процесс.</p>
+      <p>Наш сервер базируется на тщательно подобранной сборке из более чем 120 модов, адаптированных для версии 1.16.5 Forge Optifine. Вы сможете испытать свои силы в схватках с драконами из Ice and Fire, освоить сложные ритуалы Occultism и Blood Magic, исследовать древние гробницы Tombstone и даже заняться фермерством с помощью Farmers Delight.</p>
+      <p>Присоединиться к нам очень легко и просто благодаря открытому порту, а сервер, рассчитанный на 30 игроков, обеспечит комфортную игру для всех.</p>
+      <p>Наша команда из четырех администраторов поддерживает сервер в актуальном состоянии, оперативно устраняя проблемы и запуская новые увлекательные ивенты. Мы стремимся создать теплое и дружное сообщество, где каждый сможет найти занятие по душе.</p>
+      <p>Присоединяйтесь к нашему активному ВК-чату и Discord-серверу! Здесь вы всегда будете в курсе последних новостей, обновлений и увлекательных событий. В нашем сообществе вас ждут разнообразные рубрики и возможность пообщаться с другими игроками.</p>
     </div>
-    <div class="main-right">
+    <div class="server-ip-row">
+      <span class="server-ip-label">IP сервера:</span>
+      <span class="server-ip-value">62.60.230.20</span>
+    </div>
+  </div>
+  <div class="main-right">
+    <div class="main-image-wrapper">
       <img src="news-images/2025-04-08_15.36.40.png" alt="Скриншот сервера" class="main-image" />
-      <div class="admin-block">
-        <div class="admin-title">Администрация</div>
-        <ul>
-          <li><b>DexGarden</b> — глав. админ, вечный двигатель, живущий на реактивной тяге своего горящего пукана;</li>
-          <li><b>KeinCriper</b> — админ, креативщик, идейник, все сюжеты зависят от него;</li>
-          <li><b>双葉理央 (Футаба)</b> — тех-админ, томящаяся пробка в электро-щитке;</li>
-          <li><b>Grobberus</b> — админ, узбогоитель, он допьет чай и будет смотреть, что ты там навертел.</li>
-        </ul>
-      </div>
+    </div>
+    <div class="admin-block">
+      <div class="admin-title">Администрация</div>
+      <ul>
+        <li><b>DexGarden</b> — глав. админ, вечный двигатель, живущий на реактивной тяге своего горящего пукана;</li>
+        <li><b>KeinCriper</b> — админ, креативщик, идейник, все сюжеты зависят от него;</li>
+        <li><b>双葉理央 (Футаба)</b> — тех-админ, томящаяся пробка в электро-щитке;</li>
+        <li><b>Grobberus</b> — админ, узбогоитель, он допьет чай и будет смотреть, что ты там навертел.</li>
+      </ul>
     </div>
   </div>
-  <div class="button-group main-buttons-centered">
-    <a href="https://discord.gg/brzqxXQSm8" target="_blank" rel="noopener noreferrer" class="main-button">Присоединиться к Discord</a>
-    <a href="https://drive.google.com/file/d/1sADPdzai2lmplPwnc7rLXcC2Fu89xGu0/view?usp=drive_link" target="_blank" rel="noopener noreferrer" class="main-button">Скачать папку модов</a>
-    <a href="https://vk.me/join/wRUvoISqw2i/jPUbYqICQ8wa07_u4iSR8V4=" target="_blank" rel="noopener noreferrer" class="main-button">Чат ВКонтакте</a>
-  </div>
-  <footer>
-    <p>© Любители приключений, 2025</p>
-  </footer>
 </div>
-</body>
-</html>
