--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 </nav>
 
 <div class="content-wrapper">
-  <div class="main-content main-content-flex">
-    <div class="main-left">
+  <div class="main-content main-content-bgimg">
+    <div class="main-content-overlay">
       <h1>Уютный модовый сервер для любителей приключений</h1>
       <div class="server-description">
         <p>Добро пожаловать на наш модовый SMP-сервере в Minecraft! Вас ожидает увлекательное приключение в мире, где магия, технологии и мистика сливаются воедино. Мы предлагаем не только интересный геймплей, но и ненавязчивый сюжет, который игроки могут исследовать по своему усмотрению или же полностью игнорировать, погружаясь в свободный игровой процесс.</p>
@@ -31,11 +31,6 @@
       <div class="server-ip-row">
         <span class="server-ip-label">IP сервера:</span>
         <span class="server-ip-value">62.60.230.20</span>
-      </div>
-    </div>
-    <div class="main-right">
-      <div class="main-image-wrapper">
-        <img src="news-images/2025-04-08_15.36.40.png" alt="Скриншот сервера" class="main-image" />
       </div>
       <div class="admin-block">
         <div class="admin-title">Администрация</div>
