--- a/index.html
+++ b/index.html
@@ -20,17 +20,24 @@
 <div class="content-wrapper">
   <div class="main-content main-content-bgimg">
     <div class="main-content-overlay">
-      <h1>Уютный модовый сервер для любителей приключений</h1>
-      <div class="server-description">
-        <p>Добро пожаловать на наш модовый SMP-сервере в Minecraft! Вас ожидает увлекательное приключение в мире, где магия, технологии и мистика сливаются воедино. Мы предлагаем не только интересный геймплей, но и ненавязчивый сюжет, который игроки могут исследовать по своему усмотрению или же полностью игнорировать, погружаясь в свободный игровой процесс.</p>
-        <p>Наш сервер базируется на тщательно подобранной сборке из более чем 120 модов, адаптированных для версии 1.16.5 Forge Optifine. Вы сможете испытать свои силы в схватках с драконами из Ice and Fire, освоить сложные ритуалы Occultism и Blood Magic, исследовать древние гробницы Tombstone и даже заняться фермерством с помощью Farmers Delight.</p>
-        <p>Присоединиться к нам очень легко и просто благодаря открытому порту, а сервер, рассчитанный на 30 игроков, обеспечит комфортную игру для всех.</p>
-        <p>Наша команда из четырех администраторов поддерживает сервер в актуальном состоянии, оперативно устраняя проблемы и запуская новые увлекательные ивенты. Мы стремимся создать теплое и дружное сообщество, где каждый сможет найти занятие по душе.</p>
-        <p>Присоединяйтесь к нашему активному ВК-чату и Discord-серверу! Здесь вы всегда будете в курсе последних новостей, обновлений и увлекательных событий. В нашем сообществе вас ждут разнообразные рубрики и возможность пообщаться с другими игроками.</p>
-      </div>
-      <div class="server-ip-row">
-        <span class="server-ip-label">IP сервера:</span>
-        <span class="server-ip-value">62.60.230.20</span>
+      <div class="main-flex-row">
+        <div class="main-left">
+          <h1>Уютный модовый сервер для любителей приключений</h1>
+          <div class="server-description">
+            <p>Добро пожаловать на наш модовый SMP-сервере в Minecraft! Вас ожидает увлекательное приключение в мире, где магия, технологии и мистика сливаются воедино. Мы предлагаем не только интересный геймплей, но и ненавязчивый сюжет, который игроки могут исследовать по своему усмотрению или же полностью игнорировать, погружаясь в свободный игровой процесс.</p>
+            <p>Наш сервер базируется на тщательно подобранной сборке из более чем 120 модов, адаптированных для версии 1.16.5 Forge Optifine. Вы сможете испытать свои силы в схватках с драконами из Ice and Fire, освоить сложные ритуалы Occultism и Blood Magic, исследовать древние гробницы Tombstone и даже заняться фермерством с помощью Farmers Delight.</p>
+            <p>Присоединиться к нам очень легко и просто благодаря открытому порту, а сервер, рассчитанный на 30 игроков, обеспечит комфортную игру для всех.</p>
+            <p>Наша команда из четырех администраторов поддерживает сервер в актуальном состоянии, оперативно устраняя проблемы и запуская новые увлекательные ивенты. Мы стремимся создать теплое и дружное сообщество, где каждый сможет найти занятие по душе.</p>
+            <p>Присоединяйтесь к нашему активному ВК-чату и Discord-серверу! Здесь вы всегда будете в курсе последних новостей, обновлений и увлекательных событий. В нашем сообществе вас ждут разнообразные рубрики и возможность пообщаться с другими игроками.</p>
+          </div>
+          <div class="server-ip-row">
+            <span class="server-ip-label">IP сервера:</span>
+            <span class="server-ip-value">62.60.230.20</span>
+          </div>
+        </div>
+        <div class="main-right">
+          <img src="news-images/2025-04-08_15.36.40.png" alt="Скриншот сервера" class="main-image-cropped" />
+        </div>
       </div>
     </div>
   </div>
