--- a/rules.html
+++ b/rules.html
@@ -17,7 +17,7 @@
   <a href="rules.html" class="active">Правила</a>
 </nav>
   <div class="content-wrapper">
-    <div class="main-content">
+    <div class="main-content rules-content">
       <h1>Правила сервера</h1>
       <p>Пункты могут дополняться, видоизменяться в зависимости от ситуации. Следите внимательно за новостями и не забывайте, что не знание не освобождает от наказания!</p>
       <h2 class="rules-section-title">▶ ПРАВИЛА ДИСКОРД СЕРВЕРА</h2>
@@ -41,7 +41,7 @@
         <li>Запрещено ломать научный-центр как лорно-важную постройку. Научный центр охватывает существенную площадь с -224 53 -280 по -211 64 -201 координату. Также мы настоятельно просим удержаться фантомами от любопыства и протискиваться сквозь закрытые комнаты Научного центра. Мы понимаем Ваше желание, а Вы поймите наше нежелание вводить ограничения на эту зону. Нам будет намного сложнее установить приват, нежели Вас просить.</li>
       </ul>
       <h2 class="rules-section-title">▶ АДМИНИСТРАЦИЯ</h2>
-      <ul>
+      <ul class="admin-block">
         <li>DexGarden - глав. админ, вечный двигатель, живущий на реактивной тяге своего горящего пукана;</li>
         <li>KeinCriper - админ, креативщик, идейник, все сюжеты зависят от него;</li>
         <li>双葉理央 (Футаба) - тех-админ, томящаяся пробка в электро-щитке;</li>
